# jon

./: Cargo.toml  GNUmakefile  README.md  build.rs  limine.conf
drivers/common/: Cargo.toml
drivers/common/src/: daemon.rs  ipc.rs  lib.rs
drivers/idle/: Cargo.toml
drivers/idle/src/: main.rs
drivers/keyboard/: Cargo.toml
drivers/keyboard/src/: main.rs
drivers/random/: Cargo.toml
drivers/random/src/: main.rs  shift.rs
drivers/random_echo/: Cargo.toml
drivers/random_echo/src/: main.rs
drivers/reader/: Cargo.toml
drivers/reincarnation/: Cargo.toml
drivers/render/: Cargo.toml
drivers/task_manager/: Cargo.toml
drivers/task_manager/src/: allocator.rs  main.rs  proc.rs  ui.rs  writer.rs
drivers/task_manager/src/ui/: mod.rs  screen.rs
drivers/terminal/: Cargo.toml
drivers/writer/: Cargo.toml
kernel/: Cargo.toml
kernel/src/: main.rs  path.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86/: cpu.rs  gdt.rs  idt.rs  interrupt.rs  interrupts.rs  memory.rs  mod.rs  sched.rs  structures.rs
kernel/src/arch/x86/memory/: allocator.rs  mod.rs  paging.rs  physical.rs
kernel/src/arch/x86/sched/: switch_to.S
kernel/src/memory/: address.rs  allocator.rs  mod.rs  paging.rs  physical.rs  stack.rs  symbols.rs
kernel/src/memory/allocator/: dummy.rs  mod.rs
kernel/src/memory/loader/: elf.rs  mod.rs
kernel/src/mm/: address.rs  mod.rs
kernel/src/output/: console.rs  logger.rs  mod.rs  serial.rs  tty.rs
kernel/src/paging/: page.rs
kernel/src/sched/: fd.rs  memory.rs  mod.rs  pid.rs  scheduler.rs  stack.rs  task.rs  task_manager.rs
kernel/src/sched/fd/: mod.rs  operations.rs
kernel/src/scheme/: mod.rs  pipe.rs  proc.rs  ps2.rs  schemes.rs  serial.rs  vga.rs
kernel/src/syscall/: mod.rs
kernel/src/task_manager/: mod.rs  ui.rs
lib/: Cargo.toml
lib/src/: errno.rs  fd.rs  lib.rs  path.rs  syscall.rs
modules/common/: Cargo.toml
modules/printmod/: Cargo.toml
modules/task/: Cargo.toml
(+13 files in other folders)
