[package]
name = "jon"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Filipe dos Santos Reinert"]

[dependencies]
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.3.1"
log = "0.4.22"
noto-sans-mono-bitmap = "0.3.0"
spinning_top = "0.3.0"
uart_16550 = "0.3.1"
x86_64 = "0.15.1"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"

