[package]
name = "jon"
version = "0.1.0"
edition = "2021"
authors = ["Matheus Filipe dos Santos Reinert"]

[dependencies]
acpi = "5.1.0"
bitflags = "2.6.0"
bitmap-allocator = "0.2.0"
buddy_system_allocator = "0.11.0"
goblin = { version = "0.9.3", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }
limine = "0.3.1"
log = "0.4.22"
noto-sans-mono-bitmap = "0.3.0"
spinning_top = "0.3.0"
uart_16550 = "0.3.2"
x2apic = "0.4.3"
x86_64 = "0.15.2"

[profile.dev]
panic = "abort"
debug = true

[profile.release]
panic = "abort"

